# LINE-SME-Thailand-Support

./: .replit  CLAUDE.md  DEPLOYMENT_SUMMARY.md  LINE_BOT_OPTIMIZATION_REPORT.md  app.py  app_simplified.py  check_db.py  check_errors.py  check_logs.py  check_logs_fixed.py  check_schema.py  config.py  database.py  line_service.py  main.py  models.py  openai_service.py  pyproject.toml  replit.md  test_direct.py  test_services.py  test_webhook.py
.claude/: settings.local.json
attached_assets/: Pasted--13-23-25-477-Log-Level-2-13-23-25-498-VS-Code-version-1-3-7-13-23-25-498-Remote-SSH-versio-1754029612481_1754029612482.txt  Pasted--the-screenshot-shows-responses-from-our-LineOA-but-there-are-some-errors-and-or-warning-in-th-1754038989467_1754038989468.txt  Pasted-2025-07-30-22-05-27-79-af6aa577-User-INFO-linebot-No-handler-of-MessageEvent-and-no-default-handl-1753887995852_1753887995853.txt  Pasted-2025-07-31-14-16-16-34-1f3e63b9-User-File-home-runner-workspace-pythonlibs-lib-python3-11-site-1753946238685_1753946238687.txt  Pasted-base-prompt-You-are-Thai-SME-Support-Bot-an-always-on-LINE-advisor-that-helps-micro-sm-1754125998188_1754125998189.txt
data/: thai_sme_resources.json
docs/: AI_OPTIMIZATION_GUIDE.md  DATABASE_FIXES_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FAST_PATH_DEPLOYMENT.md  OPTION_1_PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_SUPPLEMENT.md  PRD_REMOVE_DATABASE_ULTRA_PERFORMANCE.md  PR_SUMMARY.md  RADICAL_SIMPLIFICATION_PRD.md  READY_FOR_PR.md  REPLIT_SIMPLIFIED_LINEBOT_PRD.md  prd-performance-optimization-ultra-fast.md  (+3 more)
instance/: linebot.db
(+67 files in other folders)
