[project]
name = "thai-sme-linebot-simplified"
version = "2.0.0"
description = "Simplified LINE Bot for Thai SME - Replit optimized with 5-file architecture"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0", 
    "openai>=1.97.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.31.0",
]
