[project]
name = "thai-sme-linebot-simplified"
version = "2.1.0"
description = "Ultra-fast LINE Bot for Thai SME - Replit optimized with 4-file architecture (database-free)"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.97.1",
    "psutil>=7.0.0",
    "requests>=2.31.0",
]
